fix(i18n): update end of supply terminology in Danish and English translations

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -697,7 +697,7 @@
         "createChargeLink": "Tilknyt pris",
         "changeConnectionStatus": "Ændre tilslutningsstatus",
         "updateCustomerData": "Opdater kundestamdata",
-        "endOfSupply": "Start leveranceophør"
+        "endOfSupply": "Leveranceophør"
       },
       "details": {
         "address": "{{ meteringPoint.overview.shared.address }}",
@@ -1257,7 +1257,6 @@
       "saveSuccess": "Tilslutningsstatus opdateres"
     },
     "endOfSupply": {
-      "menuItem": "Start leveranceophør",
       "modalTitle": "Start leveranceophør",
       "dateLabel": "Angiv skæringsdato",
       "dateHint": "Skæringsdatoen skal ligge mellem 3 dage fra i dag og 60 dage frem.",
