--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -797,7 +797,8 @@
       "emptyState": {
         "noCases": "No cases found",
         "noCaseSelected": "No case selected"
-      }
+      },
+      "closed": "Closed"
     },
     "relatedMeteringPointsTitle": "Related metering points",
     "relatedMeteringPointsLoading": "Loading related metering points",
