Add reset option for mitid

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -2814,6 +2814,9 @@
         },
         "editRole": "Rediger brugerrolle",
         "disable": "Deaktiver",
+        "resetMitID": "Nulstil MitID tilknytning",
+        "resetMitIDError": "Noget gik galt. MitID tilknytning blev muligvis ikke nulstillet. Prøv igen.",
+        "resetMitIDSuccess": "MitID tilknytning nulstillet. Brugeren kan knytte MitID igen ved næste login.",
         "reset2fa": "Nulstil tofaktorgodkendelse",
         "reset2faError": "Noget gik galt. Tofaktorgodkendelse blev muligvis ikke nulstillet. Prøv igen.",
         "reset2faSuccess": "Tofaktorgodkendelse nulstillet. Brugeren skal opsætte tofaktorgodkendelse inden for 24 timer.",
