--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -2812,6 +2812,9 @@
         },
         "editRole": "Edit user role",
         "disable": "Deactivate",
+        "resetMitID": "Reset MitID connection",
+        "resetMitIDError": "Something went wrong. MitID connection may not have been reset. Please try again",
+        "resetMitIDSuccess": "MitID connection has been reset. The user can link MitID again at next login.",
         "reset2fa": "Reset two-factor authentication",
         "reset2faError": "Something went wrong. Two-factor authentication may not have been reset. Please try again",
         "reset2faSuccess": "Two-factor authentication has been reset. The user can re-configure two-factor authentication at next login. The login must be done within 24 hours.",
