--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -789,14 +789,15 @@
         "priceAssociation": "{{ shared.terminology.chargeLink }}",
         "newCase": "New case"
       },
-      "receiverLabel": "Receiver",
+      "receiverLabel": "To",
       "receivers": {
         "ENERGY_SUPPLIER": "Energy supplier",
         "ENERGINET": "Energinet",
         "GRID_ACCESS_PROVIDER": "Grid access provider"
       },
-      "internalNoteLabel": "Internal note",
+      "internalNoteLabel": "Internal note (not enclosed)",
       "messageLabel": "Message",
+      "messagePlaceholder": "Write a message",
       "sendButton": "Send",
       "emptyState": {
         "noCases": "No cases found",
